fixed dark mode

--- a/src/styles/_themes.scss
+++ b/src/styles/_themes.scss
@@ -201,3 +201,9 @@ p {
     color: themed("textColor");
   }
 }
+
+li {
+  @include themify($themes) {
+    color: themed("textColor");
+  }
+}
